--- a/entrenar2.html
+++ b/entrenar2.html
@@ -86,50 +86,50 @@
     <div class="col-sm-12">
       <h3>TODAS LAS CLASES</h3>
     <div class="row">
-          <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-xl-1 offset-lg-1 offset-md-1">
+          <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1">
             <div class="entre-2">
               <img src="../img/entrenamientos_fuerza.jpg" alt="entrenamiento de fuerza" class="overlay-black rounded-1r">
-              <div class="d-grid gap-2 col-12 mx-auto">
+              <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Fuerza</button>
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
+          <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
             <div>
               <img src="../img/entrenamientos_funcional.jpg" alt="entrenamiento funcional"  class="overlay-black rounded-1r">
-              <div class="d-grid gap-2 col-12 mx-auto">
+              <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Funcional</button>
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-lg-1 offset-md-1 entre-2">
+          <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-lg-1 offset-md-1 entre-2">
             <div>
               <img src="../img/entrenamientos_footing.jpg" alt="entrenamiento footing" class="overlay-black rounded-1r">
             </div>
-            <div class="d-grid gap-2 col-12 mx-auto">
+            <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
               <button class="btn btn-primary" type="button">Footing</button>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
+          <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
             <div>
               <img src="../img/entrenamientos_musculatura.jpg" alt="entrenamiendo de Musculatura"  class="overlay-black rounded-1r">
-              <div class="d-grid gap-2 col-12 mx-auto">
+              <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Musculatura</button>
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-xl-1  entre-2">
+          <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1  entre-2">
             <div>
               <img src="../img/entrenamientos_intensivo.jpg" alt="entrenamiento intensivo"  class="overlay-black rounded-1r">
-              <div class="d-grid gap-2 col-12 mx-auto">
+              <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Intensivo</button>
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
+          <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
             <div>
               <img src="../img/entrenamientos_spinning.jpg" alt="entrenamiendo de spinning"  class="overlay-black rounded-1r">
-              <div class="d-grid gap-2 col-12 mx-auto">
+              <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Spinning</button>
               </div>
             </div>
