--- a/entrenar2.html
+++ b/entrenar2.html
@@ -88,7 +88,7 @@
     <div class="row">
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1">
             <div class="entre-2">
-              <img src="../img/entrenamientos_fuerza.jpg" alt="entrenamiento de fuerza" class="overlay-black rounded-1r">
+              <img src="img/entrenamientos_fuerza.jpg" alt="entrenamiento de fuerza" class="overlay-black rounded-1r">
               <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Fuerza</button>
               </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
             <div>
-              <img src="../img/entrenamientos_funcional.jpg" alt="entrenamiento funcional"  class="overlay-black rounded-1r">
+              <img src="img/entrenamientos_funcional.jpg" alt="entrenamiento funcional"  class="overlay-black rounded-1r">
               <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Funcional</button>
               </div>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-lg-1 offset-md-1 entre-2">
             <div>
-              <img src="../img/entrenamientos_footing.jpg" alt="entrenamiento footing" class="overlay-black rounded-1r">
+              <img src="img/entrenamientos_footing.jpg" alt="entrenamiento footing" class="overlay-black rounded-1r">
             </div>
             <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
               <button class="btn btn-primary" type="button">Footing</button>
@@ -112,7 +112,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
             <div>
-              <img src="../img/entrenamientos_musculatura.jpg" alt="entrenamiendo de Musculatura"  class="overlay-black rounded-1r">
+              <img src="img/entrenamientos_musculatura.jpg" alt="entrenamiendo de Musculatura"  class="overlay-black rounded-1r">
               <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Musculatura</button>
               </div>
@@ -120,7 +120,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1  entre-2">
             <div>
-              <img src="../img/entrenamientos_intensivo.jpg" alt="entrenamiento intensivo"  class="overlay-black rounded-1r">
+              <img src="img/entrenamientos_intensivo.jpg" alt="entrenamiento intensivo"  class="overlay-black rounded-1r">
               <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Intensivo</button>
               </div>
@@ -128,7 +128,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-2">
             <div>
-              <img src="../img/entrenamientos_spinning.jpg" alt="entrenamiendo de spinning"  class="overlay-black rounded-1r">
+              <img src="img/entrenamientos_spinning.jpg" alt="entrenamiendo de spinning"  class="overlay-black rounded-1r">
               <div class="d-grid gap-2 col-sm-6 col-lg-12 mx-auto">
                 <button class="btn btn-primary" type="button">Spinning</button>
               </div>
