--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 entre-1">
             <div>
-              <img src="../img/entrenadores_01.png" alt="Entrenador">
+              <img src="img/entrenadores_01.png" alt="Entrenador">
               <div class="d-grid gap-2 col-12 mx-auto">
                 <button class="btn btn-primary" type="button">Mateo Palacios</button>
               </div>
@@ -181,7 +181,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl3 offset-xl-1 offset-lg-1 offset-md-1 entre-1">
             <div>
-              <img src="../img/entrenadores_02.png" alt="Entrenadora">
+              <img src="img/entrenadores_02.png" alt="Entrenadora">
               <div class="d-grid gap-2 col-12 mx-auto">
                 <button class="btn btn-primary" type="button">Emilia Rodas</button>
               </div>
@@ -189,7 +189,7 @@
           </div>
           <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-xl-1 offset-lg-1 offset-md-1  entre-1">
             <div>
-              <img src="../img/entrenadores_03.png" alt="Entrenador">
+              <img src="img/entrenadores_03.png" alt="Entrenador">
               <div class="d-grid gap-2 col-12 mx-auto">
                 <button class="btn btn-primary" type="button">Luis Rodríguez</button>
               </div>
