--- a/planes2.html
+++ b/planes2.html
@@ -115,47 +115,47 @@
       <div class="row">
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-lg-1">
           <div class="merch">
-            <img src="../img/merch/remerah.png" alt="" >
+            <img src="img/merch/remerah.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
           <div class="merch">
-            <img src="../img/merch/botella.png" alt="" >
+            <img src="img/merch/botella.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
           <div class="merch">
-            <img src="../img/merch/remeram.png" alt="" >
+            <img src="img/merch/remeram.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-lg-1 ">
           <div class="merch">
-            <img src="../img/merch/remeralargah.png" alt="" >
+            <img src="img/merch/remeralargah.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
           <div class="merch">
-            <img src="../img/merch/kettlebel.png" alt="" >
+            <img src="img/merch/kettlebel.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
           <div class="merch">
-            <img src="../img/merch/Womens_Bomber.png" alt="" >
+            <img src="img/merch/Womens_Bomber.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 offset-lg-1">
           <div class="merch">
-            <img src="../img/merch/Womens_Bomber.png" alt="" >
+            <img src="img/merch/Womens_Bomber.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
           <div class="merch">
-            <img src="../img/merch/guantes.png" alt="" >
+            <img src="img/merch/guantes.png" alt="" >
           </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
           <div class="merch">
-            <img src="../img/merch/Womens_Legging.png" alt="" >
+            <img src="img/merch/Womens_Legging.png" alt="" >
           </div>
         </div>
       </div>
